adding some css to the pages

--- a/homePage.html
+++ b/homePage.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <header>
-        <!-- logo will go here -->
-
+      <img src="version_1/images/logo.svg" alt="">
       <h1>Discover the Thrill of Bouldering</h1>
     </header>
     <main>
