--- a/page-2.html
+++ b/page-2.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <!-- logo will go here -->
-
+      <img src="version_1/images/logo.svg" alt="">
+      
       <h1>Getting started with Bouldering</h1>
     </header>
 
